# langchain-rag

./: .env.example  .gitignore  CLAUDE.md  config.py  main.py  pyproject.toml
frontend/: .env.example  package-lock.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Login.tsx
frontend/src/hooks/: useAuth.ts
src/domain/: interfaces.py  models.py  user_models.py
src/infrastructure/: auth_middleware.py  auth_service.py  container.py  document_service.py  rag_service.py
src/presentation/: router.py
